<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ID3 Tagger</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mp3_author">Author</string>
    <string name="mp3_album">Album</string>
    <string name="mp3_title">Title:</string>
    <string name="save">Mentés</string>
    <string name="search">Keresés</string>
    <string name="artist">Large Text</string>
    <string name="title_album">Small Text</string>
    <string name="title">Előadó</string>
    <string name="cancel">Cancel</string>

</resources>
